# OCRack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml
pdf_translate/: __init__.py  assemble.py  chapters.py  chunker.py  cli.py  extract.py  images.py  logger.py  pricing.py  simple_ui.py  status.py  translate.py  ui_status.py  utils.py
